<resources>
    <string name="app_name">CookingRecipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_yourProfile">Your Profile</string>
    <string name="menu_savedRecipes">Saved Recipes</string>
    <string name="menu_login">Login</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_of_recipe">Title of recipe</string>
    <string name="photo_of_recipe">photo of recipe</string>
    <string name="all_recipes">All Recipes</string>
    <string name="YourPhoto">This is your photo</string>
    <string name="YourName">This is place for your name</string>
    <string name="YourDescription">This is place for your description</string>
    <string name="title">"This is place for the title</string>
    <string name="description">This is place for the description</string>
    <string name="descriptionText">Description</string>
    <string name="confirm">Confirm</string>
    <string name="AddTime">Add Cooking Time</string>
    <string name="Ingredients">Ingredients</string>
    <string name="addIngredients">Click to add Ingredient!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_with_facebook">Login with facebook</string>
    <string name="add">Add</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_of_the_recipe">Description of the recipe</string>
    <string name="categories">Categories</string>
    <string name="tags">Tags</string>
    <string name="facebook_app_id">458476595216657</string>
    <string name="fb_login_protocol_scheme">fb458476595216657</string>
    <string name="nameofingredient">NameOfIngredient</string>
    <string name="amount">amount</string>
    <string name="category">category</string>
    <string name="ascending_name">Ascending name</string>
    <string name="descending_name">Descending name</string>
    <string name="descending_date">Descending date</string>
    <string name="ascending_date">Ascending date</string>
    <string name="sign_out">Sign out</string>

</resources>
