<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allRecipes"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/all_recipes" />
        <item
            android:id="@+id/nav_yourprofile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_yourProfile" />
        <item
            android:id="@+id/nav_savedRecipes"
            android:icon="@drawable/ic_menu_savedrecipes"
            android:title="@string/menu_savedRecipes" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/categories" />
    </group>

</menu>
