<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <EditText
        android:id="@+id/AddTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/AddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddTitle"
        android:hint="@string/description"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/AddCookingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddDescription"
        android:hint="@string/AddTime"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/AddIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddCookingTime"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/addIngredients"/>


    <Button
        android:id="@+id/confirmButton"
        android:layout_width="173dp"
        android:layout_height="68dp"
        android:text="@string/confirm"
        android:backgroundTint="@color/teal_200"
        android:layout_below="@id/AddIngredients"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        />

</RelativeLayout>