<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SelectedRecipe"
android:layout_marginStart="10dp"
android:layout_marginEnd="10dp"
android:layout_marginTop="10dp">

<TextView
    android:id="@+id/Recipe_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/black"
    android:text="@string/title"
    />

<TextView
    android:id="@+id/CookingTime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/AddTime"
    android:layout_below="@id/Recipe_title"
    android:textSize="16sp"
    />

<ImageView
    android:id="@+id/image"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_below="@id/CookingTime"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    tools:srcCompat="@tools:sample/avatars"/>

<TextView
    android:id="@+id/ingredients"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/image"
    android:textSize="20sp"
    android:textColor="@color/black"
    android:text="@string/Ingredients"
    />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/ingredientsList"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/ingredients"
    />

<TextView
    android:layout_marginTop="20dp"
    android:id="@+id/Description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/ingredientsList"
    android:textSize="20sp"
    android:text="@string/descriptionText"
    android:textColor="@color/black"
    />

</RelativeLayout>
