<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_allRecipes">

    <fragment
    android:id="@+id/nav_allRecipes"
    android:name="com.example.cookingrecipes.ui.AllRecipes.AllRecipes"
    android:label="All Recipes"
    tools:layout="@layout/all_recipes_fragment" />

    <fragment
        android:id="@+id/nav_yourprofile"
        android:name="com.example.cookingrecipes.ui.YourProfile.YourProfileFragment"
        android:label="@string/menu_yourProfile"
        tools:layout="@layout/fragment_yourprofile" />

    <fragment
        android:id="@+id/nav_savedRecipes"
        android:name="com.example.cookingrecipes.ui.SavedRecipes.SavedRecipesFragment"
        android:label="@string/menu_savedRecipes"
        tools:layout="@layout/fragment_savedrecipes" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.cookingrecipes.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />


    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.cookingrecipes.ui.Categories.CategoriesFragment"
        android:label="Categories"
        tools:layout="@layout/fragment_categories"
        />


</navigation>