<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="5dp"
    android:minHeight="200dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/TitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_of_recipe"
            android:layout_toEndOf="@id/Recipe_photo"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/Categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TitleTV"
            android:layout_toEndOf="@id/Recipe_photo"
            android:textSize="18sp"
            android:text="@string/categories"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Categories"
            android:layout_toEndOf="@id/Recipe_photo"
            android:textSize="15sp"
            android:text="@string/tags"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/Recipe_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photo_of_recipe"
            tools:src="@tools:sample/avatars" />


    </RelativeLayout>




</androidx.cardview.widget.CardView>